[gd_scene load_steps=17 format=3 uid="uid://dqvxh5cs8dxxc"]

[ext_resource type="Script" uid="uid://co5fbfk4p7661" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="PackedScene" uid="uid://b6ryvxcjxrs4n" path="res://entities/player/models/Kitty.glb" id="2_sglur"]
[ext_resource type="PackedScene" uid="uid://xu0iswyhaefc" path="res://entities/player/models/Cart.glb" id="3_bls4j"]
[ext_resource type="Shape3D" uid="uid://c58mdn40nckky" path="res://entities/player/models/cart_concave_shape.tres" id="3_fkugw"]
[ext_resource type="AudioStream" uid="uid://dpxgfoosdlp7g" path="res://entities/player/sfx/cart_bump/721549__inmotionaudio__objwhled_teatrolley02_inmotionaudio_freesamplesunday1.ogg" id="5_8fjmc"]
[ext_resource type="AudioStream" uid="uid://b7nsfup5hgjvp" path="res://entities/player/sfx/cart_bump/721549__inmotionaudio__objwhled_teatrolley02_inmotionaudio_freesamplesunday2.ogg" id="6_qiwj3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_symyc"]
albedo_color = Color(0.18359044, 0.18359044, 0.18359044, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_abrql"]
material = SubResource("StandardMaterial3D_symyc")
top_radius = 0.1
bottom_radius = 0.1
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sglur"]
albedo_color = Color(0.91228896, 0.9122889, 0.91228884, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_bls4j"]
material = SubResource("StandardMaterial3D_sglur")
top_radius = 0.05
bottom_radius = 0.05
height = 0.07

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_abrql"]
albedo_color = Color(0.58735806, 0.48626548, 0.36695486, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sfv1e"]
material = SubResource("StandardMaterial3D_abrql")
radius = 0.3
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_bls4j"]
size = Vector3(1, 0.077697754, 1.6552734)

[sub_resource type="SphereShape3D" id="SphereShape3D_symyc"]
radius = 1.3

[sub_resource type="LabelSettings" id="LabelSettings_symyc"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_26q78"]
random_pitch = 1.08
streams_count = 2
stream_0/stream = ExtResource("5_8fjmc")
stream_1/stream = ExtResource("6_qiwj3")

[node name="Player" type="VehicleBody3D"]
mass = 100.0
gravity_scale = 3.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 1
linear_damp = 0.25
angular_damp = 0.8
script = ExtResource("1_symyc")

[node name="WheelFrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.1, 0.5)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.1
wheel_friction_slip = 1.4
suspension_stiffness = 1000.0
suspension_max_force = 10000.0
damping_compression = 15.0
damping_relaxation = 15.0

[node name="wheel" type="Node3D" parent="WheelFrontRight"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelFrontRight/wheel"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_abrql")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelFrontRight/wheel"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bls4j")
skeleton = NodePath("../..")

[node name="WheelFrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.1, 0.5)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.1
wheel_friction_slip = 1.4
suspension_stiffness = 1000.0
suspension_max_force = 10000.0
damping_compression = 15.0
damping_relaxation = 15.0

[node name="wheel2" type="Node3D" parent="WheelFrontLeft"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelFrontLeft/wheel2"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_abrql")
skeleton = NodePath("../../../WheelFrontRight")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelFrontLeft/wheel2"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bls4j")
skeleton = NodePath("../../../WheelFrontRight")

[node name="WheelBackRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.1, -0.5268518)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.1
wheel_friction_slip = 1.1
suspension_stiffness = 1000.0
suspension_max_force = 10000.0
damping_compression = 15.0
damping_relaxation = 15.0

[node name="wheel3" type="Node3D" parent="WheelBackRight"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelBackRight/wheel3"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_abrql")
skeleton = NodePath("../../../WheelFrontRight")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelBackRight/wheel3"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bls4j")
skeleton = NodePath("../../../WheelFrontRight")

[node name="WheelBackLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.1, -0.5268518)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.1
wheel_friction_slip = 1.1
suspension_stiffness = 1000.0
suspension_max_force = 10000.0
damping_compression = 15.0
damping_relaxation = 15.0

[node name="wheel4" type="Node3D" parent="WheelBackLeft"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelBackLeft/wheel4"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_abrql")
skeleton = NodePath("../../../WheelFrontRight")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelBackLeft/wheel4"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bls4j")
skeleton = NodePath("../../../WheelFrontRight")

[node name="Kitty" parent="." instance=ExtResource("2_sglur")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -1.031)

[node name="Skeleton3D" parent="Kitty/Armature" index="0"]
bones/0/position = Vector3(3.5597633e-10, 0.1779069, 0.023903767)
bones/0/rotation = Quaternion(7.5339734e-09, 0.99500847, -0.099790506, -7.512105e-08)
bones/2/rotation = Quaternion(0.10071394, 3.162492e-08, -1.2006042e-08, 0.9949154)
bones/3/rotation = Quaternion(-0.091511875, 5.6189214e-07, -4.363625e-08, 0.9958041)
bones/10/rotation = Quaternion(0.5028261, 0.10975817, 0.36536074, 0.7756486)
bones/11/rotation = Quaternion(0.10195435, -0.0021906358, -0.022123413, 0.99454063)
bones/13/rotation = Quaternion(0.53945214, -0.09004583, -0.35189754, 0.759639)
bones/14/rotation = Quaternion(0.10195432, 0.002190629, 0.02212341, 0.99454063)
bones/15/rotation = Quaternion(-0.0023459413, 0.16983873, 0.9854281, 0.008994448)
bones/16/rotation = Quaternion(-0.38418585, -0.0008202865, 0.0028212622, 0.9232511)
bones/17/rotation = Quaternion(0.86198115, -0.0101245595, -0.019257205, 0.5064732)
bones/18/rotation = Quaternion(-0.62916744, -0.007078943, -0.00812796, 0.77719504)
bones/18/scale = Vector3(0.99999964, 0.99999964, 0.99999994)
bones/19/rotation = Quaternion(0.37935752, -0.00013247902, 0.00032660566, 0.9252502)
bones/19/scale = Vector3(1.0000002, 1.0000001, 1)
bones/20/rotation = Quaternion(0.12588824, -8.132267e-05, 0.00069904834, 0.99204427)
bones/21/rotation = Quaternion(-0.20596519, 0.00041609514, 0.0017363272, 0.97855777)
bones/22/rotation = Quaternion(-0.21563232, 0.0010716022, 0.0038760062, 0.9764664)
bones/23/rotation = Quaternion(-0.0048099626, 0.9218884, -0.38741916, -0.0022507384)
bones/25/rotation = Quaternion(0.0023458055, 0.16983876, 0.9854281, -0.008994471)
bones/26/rotation = Quaternion(-0.38418597, 0.0008203344, -0.002821301, 0.9232511)
bones/27/rotation = Quaternion(0.8619813, 0.010124536, 0.019257208, 0.5064731)

[node name="LookingProductPosition" type="Marker3D" parent="Kitty"]
unique_name_in_owner = true
transform = Transform3D(-1, -6.6317716e-15, 8.742275e-08, 0, 0.9999998, 1.4901161e-08, -8.742278e-08, 1.4901161e-08, -0.9999998, 0, 1.7, -0.031)

[node name="MeshPerson" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1.030626)
visible = false
mesh = SubResource("CapsuleMesh_sfv1e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.31118774, 0.32763672)
shape = SubResource("BoxShape3D_bls4j")

[node name="Cart" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = ExtResource("3_fkugw")

[node name="CenterOfMass" type="Marker3D" parent="Cart"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)

[node name="HandsReachArea3D" type="Area3D" parent="Cart"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.1)
collision_layer = 0
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cart/HandsReachArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.35122263)
visible = false
shape = SubResource("SphereShape3D_symyc")

[node name="Cart" parent="Cart" instance=ExtResource("3_bls4j")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, -0.051015615, 0.30758107)

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="BaseCameraPosition" type="Marker3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(-1, -1.5180808e-08, 8.609463e-08, 0, 0.9848078, 0.1736482, -8.742278e-08, 0.1736482, -0.9848078, 0, 1.7600884, -3.1913815)

[node name="CameraMain" type="Camera3D" parent="CameraPivot/BaseCameraPosition"]
unique_name_in_owner = true
transform = Transform3D(1, -1.7763568e-15, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
current = true
fov = 90.0

[node name="BaseCameraLookAt" type="Marker3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.9999998)

[node name="DebugLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Velocity" type="Label" parent="DebugLayer"]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 10.0
offset_right = 56.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_symyc")

[node name="BoxDropOff" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.5148661)

[node name="Bump" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.34995282, 0.5359477)
stream = SubResource("AudioStreamRandomizer_26q78")
max_polyphony = 6
bus = &"Cart"

[connection signal="body_entered" from="Cart/HandsReachArea3D" to="." method="_on_hands_reach_area_3d_body_entered_or_exited"]
[connection signal="body_exited" from="Cart/HandsReachArea3D" to="." method="_on_hands_reach_area_3d_body_entered_or_exited"]

[editable path="Kitty"]
